--- a/index.html
+++ b/index.html
@@ -8,34 +8,34 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="wrapper"> 
+    <div class="wrapper">
+        <header class="header">
+            <div class="container header-container">
+                <a href="" class="logo">
+                    <img src="img/logo.png" alt="" class="img__pic">
+                </a>
+                <nav class="nav">
+                    <ul class="nav__list">
+                        <li class="nav__item">
+                            <a href="" class="nav__link">Главная</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="" class="nav__link">О нас</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="" class="nav__link">Каталог</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="" class="nav__link">Контакты</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
         <section class="section main">
-            <header class="header">
-                <div class="container header-container">
-                    <a href="" class="logo">
-                        <img src="img/logo.png" alt="" class="img__pic">
-                    </a>
-                    <nav class="nav">
-                        <ul class="nav__list">
-                            <li class="nav__item">
-                                <a href="" class="nav__link">Главная</a>
-                            </li>
-                            <li class="nav__item">
-                                <a href="" class="nav__link">О нас</a>
-                            </li>
-                            <li class="nav__item">
-                                <a href="" class="nav__link">Каталог</a>
-                            </li>
-                            <li class="nav__item">
-                                <a href="" class="nav__link">Контакты</a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-            </header>
             <div class="container container-main">
                 <h2 class="main__title">
-                    Строительная компания 
+                    Строительная компания
                     <span class="yellow">верхняя</span>
                 </h2>
                 <div class="main__subtitle">
@@ -47,29 +47,104 @@
                 <div class="main__adv">
                     <ul class="main__adv-list">
                         <li class="main__adv-item">Репутация</li>
-                        <li class="main__adv-item">Квалифицированный персонал</li>
                         <li class="main__adv-item">Гарантия качества</li>
+                    </ul>
+                    <ul class="main__adv-list">
+                        <li class="main__adv-item">Квалифицированный персонал </li>
                         <li class="main__adv-item">Ответственный подрядчик</li>
                     </ul>
                 </div>
             </div>
         </section>
         <section class="about">
-            <div class="container">
+            <div class="container conteiner-about">
                 <h2 class="title">О нас</h2>
-                <div class="about__logo">
-                    <img src="" alt="" class="about__logo-pic">
+                <div class="about-content">
+                    <div class="about__logo">
+                        <img src="img/logo-up.png" alt="" class="about__logo-pic">
+                        <img src="img/logo-down.png" alt="" class="about__logo-down">
+                    </div>
+                    <div class="about__desc">
+                        <ul class="about__desc-list">
+                            <li class="about__desc-item">
+                                Строительная Компания Верхняя — 
+                                <span class="mint">молодая и динамично развивающаяся команда профессионалов</span>
+                            </li>
+                            <li class="about__desc-item">
+                                Главный ресурс — <span class="mint">репутация</span>
+                            </li>
+                            <li class="about__desc-item">
+                                Основная цель — <span class="mint">долгосрочное сотрудничество</span>
+                            </li>
+                            <li class="about__desc-item">
+                                Единственная реклама — <span class="mint">рекомендации наших заказчиков</span>
+                            </li>
+                            <li class="about__desc-item">
+                                Преимущество — <span class="mint">работа с любым объёмом, качественно и в срок</span>
+                            </li>
+                            <li class="about__desc-item">
+                                Строительная Компания Верхняя — <span class="mint">Ваш ответственный Подрядчик!</span>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="about__desc">
-                    <ul class="about__desc-list">
-                        <li class="about__desc-item">Строительная Компания Верхняя — молодая и динамично развивающаяся команда профессионалов</li>
-                        <li class="about__desc-item">Главный ресурс — репутация</li>
-                        <li class="about__desc-item">Основная цель — долгосрочное сотрудничество</li>
-                        <li class="about__desc-item">Единственная реклама — рекомендации наших заказчиков</li>
-                        <li class="about__desc-item">Преимущество — работа с любым объёмом, качественно и в срок</li>
-                        <li class="about__desc-item">Строительная Компания Верхняя — Ваш ответственный Подрядчик!</li>
-                    </ul>
-                </div>
+            </div>
+        </section>
+        <section class="services">
+            <div class="container">
+                <h2 class="title">Какие работы выполняем</h2>
+                <ul class="services__list">
+                    <li class="services__item">
+                        <div class="services__wrapper">
+                            <div class="services__header">
+                                <div class="services__number">01</div>
+                                <div class="services__title">Фасадные работы</div>
+                            </div>
+                            <ul class="serv__list">
+                                <li class="serv__item">Утепление,оштукатуривание,покраска,мойка гидрофобизация и другое</li>
+                                <li class="serv__item">Вентилируемый фасад,мокрый фасад и другие виды фасадов</li>
+                                <li class="serv__item">Герметизация межпанельных стыков(швов) и примыканий</li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="services__item">
+                        <div class="services__wrapper">
+                            <div class="services__header">
+                                <div class="services__number">02</div>
+                                <div class="services__title">Кровельные работы</div>
+                            </div>
+                            <ul class="serv__list">
+                                <li class="serv__item">Все виды кровельных ремонтных работ,замена и укладка наплавляемой и фальцевой кровли,диагностика и устранение протечек</li>
+                                <li class="serv__item">Замена отливов и парапетов с изготовлением их в размер</li>
+                                <li class="serv__item">Устройство сливных воронок и ливневых систем</li>
+                                <li class="serv__item">Ремонт и полное переустройство вентиляционных шахт, технических помещений</li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="services__item">
+                        <div class="services__wrapper">
+                            <div class="services__header">
+                                <div class="services__number">03</div>
+                                <div class="services__title">Внутренная отделка</div>
+                            </div>
+                            <ul class="serv__list">
+                                <li class="serv__item">Ремонт подъездов под ключ,коммерческих и производственных помещений(штукатурные и малярные работы,укладка плитки,замена окон и дверей и другие виды внутренней отделки)</li>
+                                <li class="serv__item">Сантехнические и электромонтажные работы любой сложности</li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="services__item">
+                        <div class="services__wrapper">
+                            <div class="services__header">
+                                <div class="services__number">04</div>
+                                <div class="services__title">Аренда</div>
+                            </div>
+                            <ul class="serv__list">
+                                <li class="serv__item">Аренда строительного оборудования (штукатурные станции,фасадные люльки)</li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </section>
     </div>
