--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </nav>
             </div>
         </header>
-        <section class="section main">
+        <section class="main">
             <div class="container container-main">
                 <h2 class="main__title">
                     Строительная компания
@@ -147,6 +147,152 @@
                 </ul>
             </div>
         </section>
+        <section class="works">
+            <div class="container container-work">
+                <h2 class="title title-work">Наши работы</h2>
+                <ul class="works__list">
+                    <li class="works__item">
+                        <img src="img/work1.png" alt="" class="works__img">
+                        <div class="works__arrow">
+                            <img src="img/chevrons-right.png" alt="" class="works__arrow-pic">
+                        </div>
+                        <div class="works__order">
+                            <div class="works__order-title">Заказчик</div>
+                            <div class="works__order-text">УК "Север"</div>
+                        </div>
+                        <div class="works__order">
+                            <div class="works__order-title">Виды работ</div>
+                            <div class="works__order-text">Демонтаж и устройство мокрого фасада</div>
+                        </div>
+                    </li>
+                    <li class="works__item">
+                        <img src="img/work1.png" alt="" class="works__img">
+                        <div class="works__arrow">
+                            <img src="img/chevrons-right.png" alt="" class="works__arrow-pic">
+                        </div>
+                        <div class="works__order">
+                            <div class="works__order-title">Заказчик</div>
+                            <div class="works__order-text">УК "Север"</div>
+                        </div>
+                        <div class="works__order">
+                            <div class="works__order-title">Виды работ</div>
+                            <div class="works__order-text">Демонтаж и устройство мокрого фасада</div>
+                        </div>
+                    </li>
+                    <li class="works__item">
+                        <img src="img/work1.png" alt="" class="works__img">
+                        <div class="works__arrow">
+                            <img src="img/chevrons-right.png" alt="" class="works__arrow-pic">
+                        </div>
+                        <div class="works__order">
+                            <div class="works__order-title">Заказчик</div>
+                            <div class="works__order-text">УК "Север"</div>
+                        </div>
+                        <div class="works__order">
+                            <div class="works__order-title">Виды работ</div>
+                            <div class="works__order-text">Демонтаж и устройство мокрого фасада</div>
+                        </div>
+                    </li>
+                    <li class="works__item">
+                        <img src="img/work1.png" alt="" class="works__img">
+                        <div class="works__arrow">
+                            <img src="img/chevrons-right.png" alt="" class="works__arrow-pic">
+                        </div>
+                        <div class="works__order">
+                            <div class="works__order-title">Заказчик</div>
+                            <div class="works__order-text">УК "Север"</div>
+                        </div>
+                        <div class="works__order">
+                            <div class="works__order-title">Виды работ</div>
+                            <div class="works__order-text">Демонтаж и устройство мокрого фасада</div>
+                        </div>
+                    </li>
+                    <li class="works__item">
+                        <img src="img/work1.png" alt="" class="works__img">
+                        <div class="works__arrow">
+                            <img src="img/chevrons-right.png" alt="" class="works__arrow-pic">
+                        </div>
+                        
+                        <div class="works__order">
+                            <div class="works__order-title">Заказчик</div>
+                            <div class="works__order-text">УК "Север"</div>
+                        </div>
+                        <div class="works__order">
+                            <div class="works__order-title">Виды работ</div>
+                            <div class="works__order-text">Демонтаж и устройство мокрого фасада</div>
+                        </div>
+                    </li>
+                    <li class="works__item">
+                        <img src="img/work1.png" alt="" class="works__img">
+                        <div class="works__arrow">
+                            <img src="img/chevrons-right.png" alt="" class="works__arrow-pic">
+                        </div>
+                        <div class="works__order">
+                            <div class="works__order-title">Заказчик</div>
+                            <div class="works__order-text">УК "Север"</div>
+                        </div>
+                        <div class="works__order">
+                            <div class="works__order-title">Виды работ</div>
+                            <div class="works__order-text">Демонтаж и устройство мокрого фасада</div>
+                        </div>
+                    </li>
+                </ul>
+                <div class="works__btn-wrapper">
+                    <a href="" class="works__btn">Показать еще</a>
+                </div>
+            </div>
+        </section>
+        <section class="contacts">
+            <div class="container container-contacts">
+                <div class="contacts__data">
+                    <div class="contacts__head">
+                        <div class="contacts__head-position">Генеральный директор</div>
+                        <div class="contacts__head-name">Савитский Сергей Олегович</div>
+                    </div>
+                    <a href="tel:89633147733" class="contacts__phone">8 (963)314 77 33</a>
+                    <a href="mailto:cosinus86@mail.ru" class="contacts__email">cosinus86@mail.ru</a>
+                </div>
+                <div class="contacts__ctv">
+                    Мы будем рады помочь вам с любым видом отделочных работ в Санкт-Петербурге и Ленинградской области
+                </div>
+            </div>
+        </section>
+        <footer class="footer">
+            <div class="container container-footer">
+                <div class="footer__logo">
+                    <a href="" class="logo">
+                        <img src="img/logo.png" alt="" class="img__pic">
+                    </a>
+                </div>
+                <div class="footer__desc">
+                    <div class="footer__desc-up">
+                        <nav class="nav">
+                            <ul class="nav__list nav__list-footer">
+                                <li class="nav__item">
+                                    <a href="" class="nav__link nav__link-smaller">Главная</a>
+                                </li>
+                                <li class="nav__item">
+                                    <a href="" class="nav__link nav__link-smaller">О нас</a>
+                                </li>
+                                <li class="nav__item">
+                                    <a href="" class="nav__link nav__link-smaller">Каталог</a>
+                                </li>
+                                <li class="nav__item">
+                                    <a href="" class="nav__link nav__link-smaller">Контакты</a>
+                                </li>
+                            </ul>
+                        </nav>
+                        <a href="mailto:cosinus86@mail.ru" class="footer__email">cosinus86@mail.ru</a>
+                    </div>
+                    <div class="footer__desc-down">
+                        <div class="footer__title-org">ИП Тесля Наталья Александровна </div>
+                        <div class="footer__inn">ИНН 781137957592</div>
+                        <div class="footer__ogrn">ОГРН 321470400031162</div>
+                        <div class="footer__design">©Kate Khotko</div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
