--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <p>замер и визуальное обследование<br> вашего объекта</p>
                 </div>
                 <div class="main__desc">В пределах Санкт-Петербурга и Ленинградской Области</div>
-                <a href="" class="btn">Подробнее</a>
+                <a href="#services" class="btn">Подробнее</a>
                 <div class="main__adv">
                     <ul class="main__adv-list">
                         <li class="main__adv-item">Репутация</li>
@@ -57,7 +57,7 @@
             </div>
         </section>
         <section class="about">
-            <div class="container conteiner-about">
+            <div class="container container-about">
                 <h2 class="title">О нас</h2>
                 <div class="about-content">
                     <div class="about__logo">
@@ -90,7 +90,7 @@
                 </div>
             </div>
         </section>
-        <section class="services">
+        <section id="services" class="services">
             <div class="container">
                 <h2 class="title">Какие работы выполняем</h2>
                 <ul class="services__list">
@@ -294,5 +294,6 @@
             </div>
         </footer>
     </div>
+    <script src='js/scripts.js'></script>
 </body>
 </html>
