--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
                             <a href="" class="nav__link">Главная</a>
                         </li>
                         <li class="nav__item">
-                            <a href="" class="nav__link">О нас</a>
+                            <a href="#about" class="nav__link">О нас</a>
                         </li>
                         <li class="nav__item">
-                            <a href="" class="nav__link">Каталог</a>
+                            <a href="#works" class="nav__link">Каталог</a>
                         </li>
                         <li class="nav__item">
-                            <a href="" class="nav__link">Контакты</a>
+                            <a href="#contacts" class="nav__link">Контакты</a>
                         </li>
                     </ul>
                 </nav>
             </div>
         </header>
-        <section class="main">
+        <section id="main" class="main">
             <div class="container container-main">
                 <h2 class="main__title">
                     Строительная компания
@@ -56,7 +56,7 @@
                 </div>
             </div>
         </section>
-        <section class="about">
+        <section id="about" class="about">
             <div class="container container-about">
                 <h2 class="title">О нас</h2>
                 <div class="about-content">
@@ -147,7 +147,7 @@
                 </ul>
             </div>
         </section>
-        <section class="works">
+        <section id="works" class="works">
             <div class="container container-work">
                 <h2 class="title title-work">Наши работы</h2>
                 <ul class="works__list">
@@ -242,7 +242,7 @@
                 </div>
             </div>
         </section>
-        <section class="contacts">
+        <section id="contacts" class="contacts">
             <div class="container container-contacts">
                 <div class="contacts__data">
                     <div class="contacts__head">
@@ -269,16 +269,16 @@
                         <nav class="nav">
                             <ul class="nav__list nav__list-footer">
                                 <li class="nav__item">
-                                    <a href="" class="nav__link nav__link-smaller">Главная</a>
+                                    <a href="#main" class="nav__link nav__link-smaller">Главная</a>
                                 </li>
                                 <li class="nav__item">
-                                    <a href="" class="nav__link nav__link-smaller">О нас</a>
+                                    <a href="#about" class="nav__link nav__link-smaller">О нас</a>
                                 </li>
                                 <li class="nav__item">
-                                    <a href="" class="nav__link nav__link-smaller">Каталог</a>
+                                    <a href="#works" class="nav__link nav__link-smaller">Каталог</a>
                                 </li>
                                 <li class="nav__item">
-                                    <a href="" class="nav__link nav__link-smaller">Контакты</a>
+                                    <a href="#contacts" class="nav__link nav__link-smaller">Контакты</a>
                                 </li>
                             </ul>
                         </nav>
