--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="wrapper">
+    <div id="main" class="wrapper">
         <header class="header">
             <div class="container header-container">
                 <a href="" class="logo">
@@ -32,7 +32,7 @@
                 </nav>
             </div>
         </header>
-        <section id="main" class="main">
+        <section  class="main">
             <div class="container container-main">
                 <h2 class="main__title">
                     Строительная компания
