--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                             <a href="" class="nav__link">Главная</a>
                         </li>
                         <li class="nav__item">
-                            <a href="" class="nav__link">О нас</a>
+                            <a href="#about" class="nav__link">О нас</a>
                         </li>
                         <li class="nav__item">
                             <a href="" class="nav__link">Каталог</a>
@@ -56,7 +56,7 @@
                 </div>
             </div>
         </section>
-        <section class="about">
+        <section id="about" class="about">
             <div class="container container-about">
                 <h2 class="title">О нас</h2>
                 <div class="about-content">
