--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <div id="main" class="wrapper">
         <header class="header">
             <div class="container header-container">
-                <a href="" class="logo">
+                <a href="#main" class="logo">
                     <img src="img/logo.png" alt="" class="img__pic">
                 </a>
                 <nav class="nav">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="" class="nav__link">Главная</a>
+                            <a href="#main" class="nav__link">Главная</a>
                         </li>
                         <li class="nav__item">
                             <a href="#about" class="nav__link">О нас</a>
@@ -90,7 +90,7 @@
                 </div>
             </div>
         </section>
-        <section id="services" class="services">
+        <section id="services"  class="services">
             <div class="container">
                 <h2 class="title">Какие работы выполняем</h2>
                 <ul class="services__list">
@@ -253,14 +253,16 @@
                     <a href="mailto:cosinus86@mail.ru" class="contacts__email">cosinus86@mail.ru</a>
                 </div>
                 <div class="contacts__ctv">
-                    Мы будем рады помочь вам с любым видом отделочных работ в Санкт-Петербурге и Ленинградской области
+                    <p>
+                        Мы будем рады помочь вам с любым видом отделочных работ в Санкт-Петербурге и Ленинградской области
+                    </p>
                 </div>
             </div>
         </section>
         <footer class="footer">
             <div class="container container-footer">
                 <div class="footer__logo">
-                    <a href="" class="logo">
+                    <a href="#main" class="logo">
                         <img src="img/logo.png" alt="" class="img__pic">
                     </a>
                 </div>
