--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                         </li>
                     </ul>
                 </nav>
+                <div class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </div>
         </header>
         <section  class="main">
@@ -39,7 +45,7 @@
                     <span class="yellow">верхняя</span>
                 </h2>
                 <div class="main__subtitle">
-                    <span>Оперативно и бесплатно</span>
+                    <span>Оперативно и&nbsp;бесплатно</span>
                     <p>замер и визуальное обследование<br> вашего объекта</p>
                 </div>
                 <div class="main__desc">В пределах Санкт-Петербурга и Ленинградской Области</div>
@@ -58,7 +64,7 @@
         </section>
         <section id="about" class="about">
             <div class="container container-about">
-                <h2 class="title">О нас</h2>
+                <h2 class="about-title">О нас</h2>
                 <div class="about-content">
                     <div class="about__logo">
                         <img src="img/logo-up.png" alt="" class="about__logo-pic">
@@ -99,6 +105,8 @@
                             <div class="services__header">
                                 <div class="services__number">01</div>
                                 <div class="services__title">Фасадные работы</div>
+                                <img src="img/plus-circle.png" alt="" class="services__plus services__icon">
+                                <img src="img/minus-circle.png" alt="" class="services__minus services__icon">
                             </div>
                             <ul class="serv__list">
                                 <li class="serv__item">Утепление,оштукатуривание,покраска,мойка гидрофобизация и другое</li>
@@ -112,6 +120,8 @@
                             <div class="services__header">
                                 <div class="services__number">02</div>
                                 <div class="services__title">Кровельные работы</div>
+                                <img src="img/plus-circle.png" alt="" class="services__plus services__icon">
+                                <img src="img/minus-circle.png" alt="" class="services__minus services__icon">
                             </div>
                             <ul class="serv__list">
                                 <li class="serv__item">Все виды кровельных ремонтных работ,замена и укладка наплавляемой и фальцевой кровли,диагностика и устранение протечек</li>
@@ -126,6 +136,8 @@
                             <div class="services__header">
                                 <div class="services__number">03</div>
                                 <div class="services__title">Внутренная отделка</div>
+                                <img src="img/plus-circle.png" alt="" class="services__plus services__icon">
+                                <img src="img/minus-circle.png" alt="" class="services__minus services__icon">
                             </div>
                             <ul class="serv__list">
                                 <li class="serv__item">Ремонт подъездов под ключ,коммерческих и производственных помещений(штукатурные и малярные работы,укладка плитки,замена окон и дверей и другие виды внутренней отделки)</li>
@@ -138,6 +150,8 @@
                             <div class="services__header">
                                 <div class="services__number">04</div>
                                 <div class="services__title">Аренда</div>
+                                <img src="img/plus-circle.png" alt="" class="services__plus services__icon">
+                                <img src="img/minus-circle.png" alt="" class="services__minus services__icon">
                             </div>
                             <ul class="serv__list">
                                 <li class="serv__item">Аренда строительного оборудования (штукатурные станции,фасадные люльки)</li>
