--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </section>
         <section id="services"  class="services">
             <div class="container">
-                <h2 class="title">Какие работы выполняем</h2>
+                <h2 class="title title-services">Какие работы выполняем</h2>
                 <ul class="services__list">
                     <li class="services__item">
                         <div class="services__wrapper">
@@ -109,7 +109,7 @@
                                 <img src="img/minus-circle.png" alt="" class="services__minus services__icon">
                             </div>
                             <ul class="serv__list">
-                                <li class="serv__item">Утепление,оштукатуривание,покраска,мойка гидрофобизация и другое</li>
+                                <li class="serv__item">Утепление, оштукатуривание, покраска, мойка гидрофобизация и другое</li>
                                 <li class="serv__item">Вентилируемый фасад,мокрый фасад и другие виды фасадов</li>
                                 <li class="serv__item">Герметизация межпанельных стыков(швов) и примыканий</li>
                             </ul>
@@ -282,19 +282,24 @@
                 </div>
                 <div class="footer__desc">
                     <div class="footer__desc-up">
-                        <nav class="nav">
-                            <ul class="nav__list nav__list-footer">
-                                <li class="nav__item">
-                                    <a href="#main" class="nav__link nav__link-smaller">Главная</a>
+                        <div class="footer__logo-desktop">
+                            <a href="#main" class="logo">
+                                <img src="img/logo.png" alt="" class="img__pic">
+                            </a>
+                        </div>
+                        <nav class="nav__footer">
+                            <ul class="nav__list-footer">
+                                <li class="nav__item-footer">
+                                    <a href="#main" class="nav__link-smaller">Главная</a>
                                 </li>
-                                <li class="nav__item">
-                                    <a href="#about" class="nav__link nav__link-smaller">О нас</a>
+                                <li class="nav__item-footer">
+                                    <a href="#about" class="nav__link-smaller">О нас</a>
                                 </li>
-                                <li class="nav__item">
-                                    <a href="#works" class="nav__link nav__link-smaller">Каталог</a>
+                                <li class="nav__item-footer">
+                                    <a href="#works" class="nav__link-smaller">Каталог</a>
                                 </li>
-                                <li class="nav__item">
-                                    <a href="#contacts" class="nav__link nav__link-smaller">Контакты</a>
+                                <li class="nav__item-footer">
+                                    <a href="#contacts" class="nav__link-smaller">Контакты</a>
                                 </li>
                             </ul>
                         </nav>
@@ -302,9 +307,11 @@
                     </div>
                     <div class="footer__desc-down">
                         <div class="footer__title-org">ИП Тесля Наталья Александровна </div>
-                        <div class="footer__inn">ИНН 781137957592</div>
-                        <div class="footer__ogrn">ОГРН 321470400031162</div>
-                        <div class="footer__design">©Kate Khotko</div>
+                        <div class="footer__desc-down-wrapper">
+                            <div class="footer__inn">ИНН 781137957592</div>
+                            <div class="footer__ogrn">ОГРН 321470400031162</div>
+                            <div class="footer__design">©Kate Khotko</div>
+                        </div>
                     </div>
                 </div>
             </div>
