--- a/index.html
+++ b/index.html
@@ -30,12 +30,24 @@
                         </li>
                     </ul>
                 </nav>
-                <div class="hamburger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
+                <div class="hamburger-menu">
+                    <div class="menu-btn">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <div class="menu">
+                      <nav>
+                        <ul class="menu__box">
+                            <li><a class="menu__item" href="#main">Главная</a></li>
+                            <li><a class="menu__item" href="#about">О нас</a></li>
+                            <li><a class="menu__item" href="#works">Каталог</a></li>
+                            <li><a class="menu__item" href="#contacts">Контакты</a></li>
+                        </ul>
+                      </nav>
+                      <a href="tel:89633147733" class="contacts__phone">8 (963)314 77 33</a>
+                      <a href="mailto:cosinus86@mail.ru" class="contacts__email">cosinus86@mail.ru</a>
+                  </div>
             </div>
         </header>
         <section  class="main">
