'acco-and-burger'

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <img src="img/logo.png" alt="" class="img__pic">
                 </a>
                 <nav class="nav">
-                    <ul class="nav__list">
+                    <ul class="nav__list nav__box">
                         <li class="nav__item">
                             <a href="#main" class="nav__link">Главная</a>
                         </li>
@@ -36,18 +36,7 @@
                         <span></span>
                         <span></span>
                     </div>
-                    <div class="menu">
-                      <nav>
-                        <ul class="menu__box">
-                            <li><a class="menu__item" href="#main">Главная</a></li>
-                            <li><a class="menu__item" href="#about">О нас</a></li>
-                            <li><a class="menu__item" href="#works">Каталог</a></li>
-                            <li><a class="menu__item" href="#contacts">Контакты</a></li>
-                        </ul>
-                      </nav>
-                      <a href="tel:89633147733" class="contacts__phone">8 (963)314 77 33</a>
-                      <a href="mailto:cosinus86@mail.ru" class="contacts__email">cosinus86@mail.ru</a>
-                  </div>
+                </div>
             </div>
         </header>
         <section  class="main">
@@ -117,8 +106,6 @@
                             <div class="services__header">
                                 <div class="services__number">01</div>
                                 <div class="services__title">Фасадные работы</div>
-                                <img src="img/plus-circle.png" alt="" class="services__plus services__icon">
-                                <img src="img/minus-circle.png" alt="" class="services__minus services__icon">
                             </div>
                             <ul class="serv__list">
                                 <li class="serv__item">Утепление, оштукатуривание, покраска, мойка гидрофобизация и другое</li>
@@ -132,8 +119,6 @@
                             <div class="services__header">
                                 <div class="services__number">02</div>
                                 <div class="services__title">Кровельные работы</div>
-                                <img src="img/plus-circle.png" alt="" class="services__plus services__icon">
-                                <img src="img/minus-circle.png" alt="" class="services__minus services__icon">
                             </div>
                             <ul class="serv__list">
                                 <li class="serv__item">Все виды кровельных ремонтных работ,замена и укладка наплавляемой и фальцевой кровли,диагностика и устранение протечек</li>
@@ -148,8 +133,6 @@
                             <div class="services__header">
                                 <div class="services__number">03</div>
                                 <div class="services__title">Внутренная отделка</div>
-                                <img src="img/plus-circle.png" alt="" class="services__plus services__icon">
-                                <img src="img/minus-circle.png" alt="" class="services__minus services__icon">
                             </div>
                             <ul class="serv__list">
                                 <li class="serv__item">Ремонт подъездов под ключ,коммерческих и производственных помещений(штукатурные и малярные работы,укладка плитки,замена окон и дверей и другие виды внутренней отделки)</li>
@@ -162,8 +145,6 @@
                             <div class="services__header">
                                 <div class="services__number">04</div>
                                 <div class="services__title">Аренда</div>
-                                <img src="img/plus-circle.png" alt="" class="services__plus services__icon">
-                                <img src="img/minus-circle.png" alt="" class="services__minus services__icon">
                             </div>
                             <ul class="serv__list">
                                 <li class="serv__item">Аренда строительного оборудования (штукатурные станции,фасадные люльки)</li>
@@ -177,7 +158,7 @@
             <div class="container container-work">
                 <h2 class="title title-work">Наши работы</h2>
                 <ul class="works__list">
-                    <li class="works__item">
+                    <li class="works__item hidden">
                         <img src="img/work1.png" alt="" class="works__img">
                         <div class="works__arrow">
                             <img src="img/chevrons-right.png" alt="" class="works__arrow-pic">
@@ -191,7 +172,7 @@
                             <div class="works__order-text">Демонтаж и устройство мокрого фасада</div>
                         </div>
                     </li>
-                    <li class="works__item">
+                    <li class="works__item hidden">
                         <img src="img/work1.png" alt="" class="works__img">
                         <div class="works__arrow">
                             <img src="img/chevrons-right.png" alt="" class="works__arrow-pic">
@@ -205,7 +186,7 @@
                             <div class="works__order-text">Демонтаж и устройство мокрого фасада</div>
                         </div>
                     </li>
-                    <li class="works__item">
+                    <li class="works__item hidden">
                         <img src="img/work1.png" alt="" class="works__img">
                         <div class="works__arrow">
                             <img src="img/chevrons-right.png" alt="" class="works__arrow-pic">
@@ -219,7 +200,7 @@
                             <div class="works__order-text">Демонтаж и устройство мокрого фасада</div>
                         </div>
                     </li>
-                    <li class="works__item">
+                    <li class="works__item hidden">
                         <img src="img/work1.png" alt="" class="works__img">
                         <div class="works__arrow">
                             <img src="img/chevrons-right.png" alt="" class="works__arrow-pic">
@@ -233,7 +214,7 @@
                             <div class="works__order-text">Демонтаж и устройство мокрого фасада</div>
                         </div>
                     </li>
-                    <li class="works__item">
+                    <li class="works__item hidden">
                         <img src="img/work1.png" alt="" class="works__img">
                         <div class="works__arrow">
                             <img src="img/chevrons-right.png" alt="" class="works__arrow-pic">
@@ -248,7 +229,7 @@
                             <div class="works__order-text">Демонтаж и устройство мокрого фасада</div>
                         </div>
                     </li>
-                    <li class="works__item">
+                    <li class="works__item hidden">
                         <img src="img/work1.png" alt="" class="works__img">
                         <div class="works__arrow">
                             <img src="img/chevrons-right.png" alt="" class="works__arrow-pic">
@@ -285,6 +266,18 @@
                 </div>
             </div>
         </section>
+        <div class="menu">
+            <nav>
+              <ul class="menu__box nav__box">
+                  <li><a class="menu__item" href="#main">Главная</a></li>
+                  <li><a class="menu__item" href="#about">О нас</a></li>
+                  <li><a class="menu__item" href="#works">Каталог</a></li>
+                  <li><a class="menu__item" href="#contacts">Контакты</a></li>
+              </ul>
+            </nav>
+            <a href="tel:89633147733" class="contacts__phone">8 (963)314 77 33</a>
+            <a href="mailto:cosinus86@mail.ru" class="contacts__email">cosinus86@mail.ru</a>
+          </div>
         <footer class="footer">
             <div class="container container-footer">
                 <div class="footer__logo">
